--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,14 @@
             <version>2.22.0</version>
         </dependency>
 
+        <!-- extent report -->
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.1.1</version>
+        </dependency>
+
+
     </dependencies>
 
 
