--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,2 +1,7 @@
 browser=chrome
 baseUrl=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
+environment=qa
+username=Admin
+password=admin123
+envURL=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
+testerName=Indirapriyadharsini
